# NotLab

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  README.md
.cache/clangd/index/: ast.h.164C6968BADACFF9.idx  context.c.C3218F3986D45116.idx  determinant.h.3484CDAB8E1292DC.idx  egl_context.c.48A7AB71CD1B912B.idx  equation.h.3FBD463064AC381E.idx  glfw3.h.3D05E4E96A5F4F8A.idx  glfw3native.h.4A9FF28FA1A6E169.idx  glx_context.c.D0767E1A3D95DCD1.idx  init.c.E919E97419EBB8AA.idx  input.c.2A60CDA0D8432F64.idx  internal.h.B13EA27FED8F6AB4.idx  inverse.h.BBE3F9164E1CA26C.idx  linear_solve.h.8418BBD9D0B114CA.idx  linux_joystick.c.CE44D13805272925.idx  linux_joystick.h.E0FBBCAD8E83FAEC.idx  lu_decomposition.h.520D3DD29FB47054.idx  main.cpp.A03518866347E57D.idx  mappings.h.794496CD1E0E0D86.idx  matrix.h.55AE3575CE7FF6B1.idx  monitor.c.70565AA8034BBC2F.idx  null_init.c.BDF7C8ED62CD23F5.idx  null_joystick.c.EA1AC93A6E7C4EF5.idx  null_joystick.h.764849C7D561DC83.idx  null_monitor.c.482356527A7A67B8.idx  null_platform.h.609690736AE154B0.idx  null_window.c.CB2248C3E9A7BEC0.idx  osmesa_context.c.809B45A8A0BE7E2A.idx  parser.h.A227878C54658AD1.idx  platform.c.63D2DF47AF3FFA49.idx  platform.h.CBA05E4EA0F078FE.idx  posix_module.c.63CD1549A92835F4.idx  posix_poll.c.3CA6EA07BF1E4129.idx  posix_poll.h.DE97A840E2BDB7FB.idx  posix_thread.c.B6C0EA7D88C55497.idx  posix_thread.h.2B266E0153879F99.idx  posix_time.c.C07381B084370B5A.idx  posix_time.h.22F69C3630F4AAD2.idx  substitution.h.7F25340B173C03D8.idx  test.cpp.6F5C312165C96236.idx  test.h.BEB48D50503CF448.idx  (+14 more)
algorithms/: determinant.h  inverse.h  linear_solve.h  lu_decomposition.h  substitution.h
core/: CMakeLists.txt  equation.h  matrix.h  vector.h
equation_parser/: ast.h  parser.h  tokenizer.h
renderer/: CMakeLists.txt  Shader.cpp  Shader.h  figure.cpp  figure.h  figure_base.cpp  figure_base.h  fragment.shader  renderer.cpp  renderer.h  test.cpp  test.h  text.cpp  text.h  vertex.shader
renderer/resources/: textFragment.glsl  textVertex.glsl  vertex.glsl
src/: main.cpp
